--- a/rx1_gazebo/package.xml
+++ b/rx1_gazebo/package.xml
@@ -11,5 +11,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>urdf</depend>
   <depend>xacro</depend>
+  <depend>rospy</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf</depend>
+  <depend>zmq</depend>
 </package>
-
