--- a/rx1_gazebo/package.xml
+++ b/rx1_gazebo/package.xml
@@ -16,4 +16,7 @@
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
   <depend>zmq</depend>
+  <depend>moveit_commander</depend>
+  <depend>moveit_ros_planning_interface</depend>
+
 </package>
